@startuml

title __COURSE's Class Diagram__\n

  namespace  {
    namespace ypingPractice {
      class TypingPractice.CareTaker {
      }
    }
  }
  

  namespace  {
    namespace ypingPractice {
      class TypingPractice.Controller {
      }
    }
  }
  

  namespace  {
    namespace ypingPractice {
      interface TypingPractice.DataBase {
      }
    }
  }
  

  namespace  {
    namespace ypingPractice {
      class TypingPractice.DatabaseConnection {
      }
    }
  }
  

  namespace  {
    namespace ypingPractice {
      class TypingPractice.DatabaseConnectionProxy {
      }
    }
  }
  

  namespace  {
    namespace ypingPractice {
      class TypingPractice.Helper {
      }
    }
  }
  

  namespace  {
    namespace ypingPractice {
      class TypingPractice.Login {
      }
    }
  }
  

  namespace  {
    namespace ypingPractice {
      class TypingPractice.Main {
      }
    }
  }
  

  namespace  {
    namespace ypingPractice {
      class TypingPractice.Model {
      }
    }
  }
  

  namespace  {
    namespace ypingPractice {
      interface TypingPractice.Observable {
      }
    }
  }
  

  namespace  {
    namespace ypingPractice {
      interface TypingPractice.Observer {
      }
    }
  }
  

  namespace  {
    namespace ypingPractice {
      class TypingPractice.TextProvider {
      }
    }
  }
  

  namespace  {
    namespace ypingPractice {
      class TypingPractice.View {
      }
    }
  }
  

  TypingPractice.Controller o-- TypingPractice.CareTaker : careTaker
  TypingPractice.Controller o-- TypingPractice.DataBase : db
  TypingPractice.Controller o-- TypingPractice.Login : loginController
  TypingPractice.Controller o-- TypingPractice.Model : model
  TypingPractice.Controller o-- TypingPractice.TextProvider : provider
  TypingPractice.Controller o-- TypingPractice.Helper : task
  TypingPractice.Controller o-- TypingPractice.View : view
  TypingPractice.DatabaseConnection .up.|> TypingPractice.DataBase
  TypingPractice.DatabaseConnectionProxy .up.|> TypingPractice.DataBase
  TypingPractice.Helper -up-|> java.util.TimerTask
  TypingPractice.Login o-- TypingPractice.DataBase : db
  TypingPractice.Main -up-|> javafx.application.Application
  TypingPractice.Model .up.|> TypingPractice.Observable
  TypingPractice.View .up.|> TypingPractice.Observer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
